--- a/redesign/css/style.css
+++ b/redesign/css/style.css
@@ -17,6 +17,11 @@ h1, h2, h3 {
   margin: 15px 0;
 }
 
+hr {
+  margin: 10px 0;
+  border: 1px solid #449cf2;
+}
+
 a {
   text-decoration: none;
   color: #717a85;
@@ -121,6 +126,16 @@ header {
   color: #449cf2;
 }
 
+.mobile-hero-intro {
+  display: none;
+}
+
+.mobile-hero-intro h1{
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 2%;
+}
+
 .nav-button {
   position: absolute;
   bottom: 8%;
@@ -172,21 +187,45 @@ header {
 }
 
 .container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: row;
+  /*height: 1350px;*/
   max-width: 1600px;
   width: 90%;
   margin: 0 auto;
 }
 
 .card {
-  width: 50%;
-  max-height: 600px;
-  float: left;
+  flex: 1 1 45%;
+  margin: 30px;
   overflow: hidden;
+}
+
+.card:nth-child(1), .card:nth-child(3) {
+  margin-left: 0;
+}
+
+.card:nth-child(2), .card:nth-child(4) {
+  margin-right: 0;
 }
 
 .card .card-image img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.card .card-info span {
+  color: #449cf2;
+}
+
+.card .card-info {
+  padding: 2% 0;
+}
+
+.card a:hover > .card .card-image img {
+  width: 50%;
 }
 
 @-webkit-keyframes mousescroll {
@@ -229,16 +268,25 @@ header {
     padding: 2% 0;
   }
 
-  .hero-intro-info h1 {
-    font-size: 1rem;
+  .hero-intro {
+    top: 40%;
+    /*transform: translate(0, -50%);*/
   }
 
-  .hero-intro-info h2 {
-    font-size: 0.5rem;
+  .hero-intro-info h1 {
+    font-size: 3rem;
   }
 
   .card {
-    width: 100%;
-    max-height: 500px;
+    flex: 1 1 100%;
+    margin: 0;
+  }
+
+  .desk-hero-intro {
+    display: none;
+  }
+
+  .mobile-hero-intro {
+    display: block;
   }
 }
