--- a/redesign/css/style2.css
+++ b/redesign/css/style2.css
@@ -32,7 +32,7 @@
     font-size: 1.3rem;
 }
 
-.project-info ul li{
+.project-info ul li{ 
     list-style: square;
     font-size: 1.3rem;
     margin-bottom: 20px;
@@ -100,5 +100,15 @@
 
     .project-info {
         padding: 2% 0 2% 5%;
+    }
+
+    .img-container {
+        width: auto !important;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .project-title  {
+        font-size: 3rem !important;
     }
 }
