--- a/css/style2.css
+++ b/css/style2.css
@@ -58,15 +58,23 @@
     width: 100%;
     justify-content: space-between;
     flex-wrap: wrap;
-    /* justify-content: center; */
+}
+
+.project-image-center {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .img-container {
     flex: 0 1 auto;
     margin: 25px;
     display: inline-block;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    /* border: 1px solid #38414b; */
+}
+
+.img-container img {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);    
 }
 
 @media only screen and (max-width: 1000px) {
@@ -83,10 +91,10 @@
     }
 
     .img-container {
-        width: 25%;
+        /* width: 25%; */
     }
 
-    .project-image .img-container img{
+    .project-image .img-container img{ 
         max-height: 100%;
         max-width: 100%;
     }
