--- a/redesign/css/style.css
+++ b/redesign/css/style.css
@@ -87,6 +87,72 @@ header {
     clear: both;
 }
 
+
+.overlay {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    width: 0%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    /* display: none; */
+    z-index: 9999;
+    transition: all 0.5s;
+  }
+  
+  .overlay-wrapper {
+    width: 95%;
+    height: 100vh;
+    max-width: 1600px;
+  }
+  
+  .overlay-navbar {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    margin: 0 auto;
+    /* border: 1px solid white; */
+  }
+  
+  .overlay-content_Wrapper {
+    position: relative;
+    height: calc(100% - 150px);
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+  }
+  
+  .overlay-content {
+    flex: 0 1 auto;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .overlay a {
+    padding: 10px;
+    color: #eee;
+    font-size: 30px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .overlay a:hover {
+    color: #fff;
+  }
+  
+  
+  .overlay .closeBtn {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    right: 0;
+    font-size: 35px;
+  }
+  
+
 /**************************************************************************************************************************************************************/
 /* Start Header Styling */
 /**************************************************************************************************************************************************************/
