--- a/redesign/css/app.css
+++ b/redesign/css/app.css
@@ -1,7 +1,12 @@
 .item-description {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .item-description,
@@ -11,16 +16,18 @@
     margin: 0 auto;
 }
 
-.title {
-    /* width: 100%;
-     */
-}
 
 .item-description-info {
     width: 100%;
-    /* border: 1px solid black; */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;    
 }
 
 .item-description-info-1 {
@@ -35,7 +42,10 @@
 .item-description-info-2 {
     font-size: 1.2rem;    
     padding: 5%;
-    /* border: 1px solid black;     */
+}
+
+#item-description-a {
+    color: #fb4d42;
 }
 
 .item-description-info-2 p {
@@ -46,11 +56,106 @@
     margin-top: 0;
 }
 
+.video-container {
+    background: #F66669;
+    padding: 50px;
+}
+
+.video-container video {
+    max-height: 100%;
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    -webkit-box-shadow: 0 0 70px 0px rgba(0,0,0,.15000000000000002);
+            box-shadow: 0 0 70px 0px rgba(0,0,0,.15000000000000002);
+}
+
+.video-container-inner {
+    width: 50%;
+    height: 600px;
+    float: left;
+}
+
+.video-container-inner h2,
+.video-container-inner p {
+    color: #ffffff;    
+    text-align: right;
+}
+
+.video-container-inner h2 {
+    font-weight: 800;
+    font-size: 4rem;
+}
+
+.video-container-inner h2 span span {
+    display: block;
+}
+
+.video-container-inner p {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
 .img-container {
-    box-shadow: 0 0 70px 10px rgba(0,0,0,.15000000000000002);    
+    /* box-shadow: 0 0 70px 0px rgba(0,0,0,.15000000000000002);     */
 }
 
 .img-container img{
+    display: block;
     max-width: 100%;
     max-height: 100%;
+}
+
+.img-description {
+    margin: 20px 0;
+    padding-left: 30px;
+}
+
+@media only screen and (max-width: 1100px) {
+    .video-container-inner {
+        width: 100%;
+    }
+
+    .video-container-inner:nth-child(1) {
+        height: auto;
+    }
+
+    .video-container-inner h2,
+    .video-container-inner p {
+        text-align: left;
+    }
+
+    .video-container-inner h2 {
+        font-size: 3rem;
+    }
+
+    .video-container-inner p {
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .item-description-info-1,
+    .item-description-info-2 {
+        width: 100%;
+    }
+
+    .video-container {
+        padding: 30px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+
+    .video-container-inner h2 span span {
+        display: inline-block;
+    }
+
+    .video-container {
+        padding-bottom: 10px;
+    }
+
+    .video-container-inner:nth-child(2) {
+        height: 400px;
+    }
 }
