--- a/redesign/css/style.css
+++ b/redesign/css/style.css
@@ -1,19 +1,25 @@
 /*Start General Page Styling*/
 
-*,*::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     width: 100%;
-    font-family: 'Roboto', sans-serif;    
+    font-family: 'Roboto', sans-serif;
     color: #091f2f;
 }
 
-h1, h2, h3 {    
+h1,
+h2,
+h3 {
     font-family: 'Playfair Display', serif;
 }
 
@@ -41,33 +47,36 @@ header {
     display: flex;
 }
 
+
 /* horizontal alignment */
+
 .flex-row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row wrap;
-            flex-direction: row wrap;
+    -ms-flex-direction: row wrap;
+    flex-direction: row wrap;
 }
 
+
 /* vertical alignment */
+
 .flex-column {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column wrap;
-            flex-direction: column wrap;
+    -ms-flex-direction: column wrap;
+    flex-direction: column wrap;
 }
 
 .flex-center {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 .section {
     position: relative;
     width: 100%;
 }
-
 
 .overlay {
     position: fixed;
@@ -77,21 +86,24 @@ header {
     top: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.9);
-    z-index: 9999 ;
+    z-index: 9999;
 }
 
 .clearfix::after {
     content: " ";
-    display: block; 
-    height: 0; 
+    display: block;
+    height: 0;
     clear: both;
 }
 
-
 .overlay {
     position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     top: 0;
     right: 0;
     width: 0%;
@@ -100,61 +112,75 @@ header {
     overflow-x: hidden;
     /* display: none; */
     z-index: 9999;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
     transition: all 0.5s;
-  }
-  
-  .overlay-wrapper {
+}
+
+.overlay-wrapper {
     width: 95%;
     height: 100vh;
     max-width: 1600px;
-  }
-  
-  .overlay-navbar {
+}
+
+.overlay-navbar {
     position: relative;
     width: 100%;
     height: 150px;
     margin: 0 auto;
     /* border: 1px solid white; */
-  }
-  
-  .overlay-content_Wrapper {
+}
+
+.overlay-content_Wrapper {
     position: relative;
     height: calc(100% - 150px);
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-  }
-  
-  .overlay-content {
-    flex: 0 1 auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+}
+
+.overlay-content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
     width: 100%;
     text-align: center;
-  }
-  
-  .overlay a {
+}
+
+.overlay a {
     padding: 10px;
     color: #eee;
     font-size: 30px;
     text-decoration: none;
     display: block;
-  }
-  
-  .overlay a:hover {
+}
+
+.overlay a:hover {
     color: #fff;
-  }
-  
-  
-  .overlay .closeBtn {
+}
+
+.overlay .closeBtn {
     position: absolute;
     top: 50%;
-    transform: translate(0, -50%);
+    -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%);
     right: 0;
     font-size: 35px;
-  }
-  
+}
+
 
 /**************************************************************************************************************************************************************/
+
+
 /* Start Header Styling */
+
+
 /**************************************************************************************************************************************************************/
 
 .nav-bar,
@@ -173,13 +199,13 @@ header {
 .nav-menu-wrapper {
     position: absolute;
     top: 50%;
-    -webkit-transform: translate(0,-50%);
-        -ms-transform: translate(0,-50%);
-            transform: translate(0,-50%);
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
     z-index: 6;
 }
 
-.logo-wrapper {  
+.logo-wrapper {
     left: 0;
 }
 
@@ -202,21 +228,30 @@ header {
     height: 5px;
     width: 40px;
     margin-top: 5px;
-    background-color: #091f2f; 
+    background-color: #091f2f;
 }
 
 .index-header {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .index-nav-bar {
     position: absolute;
 }
 
+
 /**************************************************************************************************************************************************************/
+
+
 /* Start Main Content Styling */
+
+
 /**************************************************************************************************************************************************************/
 
 .hero-section {
@@ -231,13 +266,6 @@ header {
     height: 70%;
     width: 75%;
     background: #091f2f;
-    /* background: #b3cae5;
-    background: -moz-linear-gradient(-45deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(12%, #b3cae5), color-stop(46%, #dbdde4), color-stop(70%, #e4e3e4), color-stop(94%, #f7ddbb), color-stop(100%, #efcab2));
-    background: -webkit-linear-gradient(-45deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%);
-    background: -o-linear-gradient(-45deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%);
-    background: -ms-linear-gradient(-45deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%);
-    background: linear-gradient(135deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%); */
     bottom: -30px;
     right: -30px;
     z-index: -1;
@@ -258,21 +286,20 @@ header {
     left: 10%;
     padding: 5%;
     -webkit-transform: translate(0, -50%);
-        -ms-transform: translate(0, -50%);
-            transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
 }
 
 .hero-section-title h1 {
     color: #ffffff;
 }
 
-.hero-section-title h1 .span-block{
+.hero-section-title h1 .span-block {
     display: block;
 }
 
 #span-period {
     color: #fb4d42;
-    /* color: #FEE79B; */
 }
 
 .hero-section-title h2 {
@@ -313,12 +340,17 @@ header {
     top: 50%;
     width: 1800px;
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
+
 /**************************************************************************************************************************************************************/
+
+
 /* Start About Styling */
+
+
 /**************************************************************************************************************************************************************/
 
 #aboutSection {
@@ -326,17 +358,16 @@ header {
 }
 
 .about-section-inner {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-    
 }
 
 .about-section-info {
     position: relative;
     width: 50%;
-    /* box-shadow: 0 0 60px 0 rgba(0,0,0,.2);     */
 }
 
 .about-section-info img {
@@ -361,8 +392,13 @@ header {
     line-height: 1.5rem;
 }
 
+
 /**************************************************************************************************************************************************************/
+
+
 /* Start Work Section Styling */
+
+
 /**************************************************************************************************************************************************************/
 
 #workSection {
@@ -371,7 +407,6 @@ header {
 
 .work-section {
     width: 100%;
-    /* overflow: hidden;     */
 }
 
 .work-section-inner {
@@ -386,186 +421,175 @@ header {
     padding-bottom: 20px;
 }
 
-.work-section-item.small {
-   /* padding: 40px; */
-}
-
 .work-section-item.right {
     padding-right: 20px;
 }
 
 .work-section-item.left {
-    padding-left: 20px;    
+    padding-left: 20px;
 }
 
 .work-section-item-inner {
     position: relative;
     border-radius: 10px;
-    box-shadow: 0 0 70px 0 rgba(0,0,0,.15000000000000002);
-    transition: all .2s ease-out;      
+    -webkit-box-shadow: 0 0 70px 0 rgba(0, 0, 0, .15000000000000002);
+            box-shadow: 0 0 70px 0 rgba(0, 0, 0, .15000000000000002);
+    -webkit-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out;
     top: 0;
 }
 
 .work-section-item-inner:hover {
     top: -3px;
-    box-shadow: 0 0 20px 0 rgba(0,0,0,.15000000000000002);
+    -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, .15000000000000002);
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, .15000000000000002);
 }
 
-  .project-item_FigureWrapper {
+.project-item_FigureWrapper {
     width: 100%;
     overflow: hidden;
-  }
-  
-  .project-item_FigureWrapper a img {
+}
+
+.project-item_FigureWrapper a img {
     width: 100%;
     display: block;
-  } 
-  
-  .project-item_Figure {
+}
+
+.project-item_Figure {
     border-radius: 5px 5px 0 0;
     height: 100%;
     margin: 0;
     background-size: cover;
-    overflow: hidden;  
-  }
-  
-  .project-item_DescriptionWrapper {
+    overflow: hidden;
+}
+
+.project-item_DescriptionWrapper {
     width: 100%;
     padding: 10px 0;
     border-top: 1px solid #DAD5D5;
-  }
-  
-  .project-item_description {
+}
+
+.project-item_description {
     border-radius: 0 0 5px 5px;
-    background: white; 
-  }
-  
-  .project-item_Titledesc {
-    color: #449cf2;  
+    background: white;
+}
+
+.project-item_Titledesc {
+    color: #091f2f;
     font-size: 1.5rem;
     font-weight: 400;
-  }
-  
-  .project-item_Workdesc {
-    font-weight: 600;
-  }
-  
-  .project-item_Title {
-    padding: 12px 0 12px 20px;
-  }
+}
 
-  .project-item_description hr {
-      width: 100px;
-      margin-left: 20px;
-  }
-  
-  .project-item_Work {
+.project-item_description h2 {
+    font-family: 'Roboto', sans-serif;
+}
+
+.project-item_Workdesc {
+    font-weight: 600;
+}
+
+.project-item_Title {
+    padding: 12px 0 12px 40px;
+}
+
+.project-item_description hr {
+    width: 100px;
+    margin-left: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.project-item_Work {
     padding-top: 5px;
-    padding-left: 20px;
-  }
-  
-  #project-item_work2 {
-    padding-bottom: 20px;
-  }
-  
+    padding-left: 40px;
+}
+
+#project-item_work2 {
+    padding-bottom: 40px;
+}
 
 
 /**************************************************************************************************************************************************************/
+
+
 /* Media Queries */
+
+
 /**************************************************************************************************************************************************************/
 
 @media only screen and (max-width: 1440px) {
-    .work-section-item-list li{
+    .work-section-item-list li {
         width: 50%;
     }
 }
 
 @media only screen and (max-width: 1200px) {
-
     .about-section-info {
         width: 30%;
     }
-
     #about-section-info-1 {
         width: 70%;
     }
-
 }
 
 @media only screen and (max-width: 900px) {
-
     h1 {
         font-size: 4rem;
     }
-
     h2 {
         font-size: 1.3rem;
     }
-
     .hero-section::after {
         display: none;
     }
-
     #aboutSection {
-        margin-top:0;
+        margin-top: 0;
     }
-
     #about-section-info-1 {
         padding: 10px;
         text-align: justify;
     }
-    
     .about-section-description {
         width: 100%;
     }
-
     .work-section-item {
         width: 100%;
-        /* margin-bottom: 20px; */
-        /* padding-left: 0; */
-        /* padding-right: 0; */
     }
-
     .work-section-item.right {
         padding-right: 0;
     }
-
     .work-section-item.left {
         padding-left: 0;
     }
-
-
-
-  }
+    #workSection {
+        margin-top: 20px;
+    }
+}
 
 @media only screen and (max-width: 900px) {
     h1 {
         font-size: 3rem;
     }
-
     h2 {
         font-size: 1.2rem;
     }
-
     .nav-bar {
         height: 100px;
     }
-
     .logo {
         font-size: 1.5rem;
     }
-
     .nav-bar a span {
         width: 30px;
         margin-top: 4px;
         height: 4px;
     }
-
     .about-section-info {
         width: 100%;
     }
 }
-
 
 @media only screen and (max-height: 700px) {
     .hero-section-inner {
@@ -574,7 +598,7 @@ header {
 }
 
 @media only screen and (max-width: 670px) {
-    .work-section-item-list li{
+    .work-section-item-list li {
         width: 100%;
     }
 }
